<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.efhem.byteworksassessment.viewmodels.SignInViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.SignInFragment">

            <ImageView
                android:id="@+id/company_logo"
                android:src="@drawable/logo_footer"
                android:layout_marginTop="@dimen/dimen_50"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/welcome_title"
                app:layout_constraintTop_toBottomOf="@id/company_logo"
                android:text="@string/welcome"
                android:layout_marginTop="@dimen/dimen_30"
                android:textColor="?android:colorPrimary"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/company_logo"
                app:layout_constraintRight_toRightOf="@id/company_logo"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edl_email"
                android:layout_margin="@dimen/dimen_30"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/welcome_title"
                app:errorText="@{viewmodel.signInErrors[`email`]}"
                android:layout_width="match_parent"
                android:hint="@string/enter_email"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_email"
                    android:text="@={viewmodel.authSignInFields[`email`]}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edl_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/dimen_20"
                app:errorText="@{viewmodel.signInErrors[`password`]}"
                app:layout_constraintTop_toBottomOf="@id/edl_email"
                app:layout_constraintLeft_toLeftOf="@id/edl_email"
                app:layout_constraintRight_toRightOf="@id/edl_email"
                android:layout_width="0dp"
                app:passwordToggleEnabled="true"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password"
                    android:text="@={viewmodel.authSignInFields[`password`]}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="@dimen/dimen_30"
                android:text="@string/sign_in"
                app:layout_constraintLeft_toLeftOf="@id/edl_password"
                app:layout_constraintRight_toRightOf="@id/edl_password"
                android:textAllCaps="true"
                app:layout_constraintTop_toBottomOf="@id/edl_password"
                android:id="@+id/sign_in_btn"
                android:layout_width="0dp"
                android:insetBottom="0dp"
                app:elevation="@dimen/dimen_6"
                android:onClick="@{() -> viewmodel.signInUser()}"
                android:insetTop="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/navigate_signup"
                app:layout_constraintTop_toBottomOf="@id/sign_in_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/dimen_50"
                app:layout_constraintVertical_bias="0"
                android:text="@string/don_t_have_an_account_yet_sign_up_now"
                app:layout_constraintLeft_toLeftOf="@id/sign_in_btn"
                app:layout_constraintRight_toRightOf="@id/sign_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</layout>